crates/core/tests/ui/missing_enum_variant_attribute.rs
#[derive(mock_default::Mock)]
enum Foo {
    Bar,
    Baz,
}

fn main() {}
